<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MySalveo</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="emailorphonenumber">Phone Number</string>
    <string name="new_here">New here ?</string>
    <string name="sign_up">Sign up</string>
    <string name="change_user_type">Change user type</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="ref_code">Referral Code</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="characters">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="usertypes">usertypes</string>
    <string name="verification">Verification</string>
    <string name="dontreceiveotp">Don\'t receive OTP ?</string>
    <string name="resend">Resend</string>
    <string name="you_will_get_a_otp_via_sms">You will get a OTP via SMS</string>
    <string name="enter_your_otp">Enter your OTP</string>
    <string name="ind">IND</string>
    <string name="choose_user_type">Choose user type</string>
    <string name="choose_pet_type">Choose pet type</string>
    <string name="basicpetdetails">My pet details</string>
    <string name="choose_breed_type">Choose breed type</string>
    <string name="no_data_found">No data found</string>
    <string name="onbackpressedmsg">The operation is disabled in the screen. </string>
    <string name="mobile_number_error">Enter mobile number</string>
    <string name="mobile_length_error">Enter valid mobile number</string>
    <string name="verify_otp_title">Verify Mobile number</string>
    <string name="invalid_otp">Invalid OTP.</string>
    <string name="re_enter_otp">Please re-enter the correct OTP</string>
    <string name="wehavesenta4digitotp">We have sent a "4 digit OTP" on</string>
    <string name="resendotp">Resend OTP in</string>
    <string name="addyourpet">Add your Pet</string>
    <string name="skip">Skip</string>
    <string name="pet_name">Name</string>
    <string name="petname">Patient Name</string>
    <string name="pet_gender">Gender</string>
    <string name="pet_color">Color</string>
    <string name="pet_weight">Weight (kg)</string>
    <string name="pet_age">Age</string>
    <string name="pet_dob">Date of Birth</string>
    <string name="vaccinated">Vaccinated</string>
    <string name="select_date">Select date</string>
    <string name="select_vaccinated">Select vaccinated date</string>
    <string name="select_petdob">Select pet date of birth</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="err_msg_type_of_pettype">Select the pet type</string>
    <string name="err_msg_type_of_petbreedtype">Select the pet breed type</string>
    <string name="err_msg_type_of_communicationtype">Select the communication type</string>
    <string name="err_msg_type_of_petgendertype">Select the pet gender type</string>
    <string name="err_msg_type_of_petcolortype">Select the pet color type</string>
    <string name="err_msg_type_of_cattype">Select the category type</string>
    <string name="err_msg_type_of_diagnosis">Select the diagnosis type</string>
    <string name="err_msg_type_of_sub_diagnosis">Select the sub diagnosis type</string>
    <string name="upload_pet_image">Upload Pet image</string>
    <string name="change_pet_image">Change Pet image</string>
    <string name="pet_last_vaccinated_age">Pet Last Vaccinated Date</string>
    <string name="please_wait">Please Wait</string>
    <string name="log_in">Log in</string>
    <string name="see_more"><u>See more</u></string>
    <string name="services">Services</string>
    <string name="products">Products</string>
    <string name="puppy_love">Puppy Love</string>
    <string name="specialization">Specialization</string>
    <string name="addyourservices">Add your services</string>
    <string name="turn_on_your_location_services">Turn on your location services</string>
    <string name="search_location_address">Search Location Address</string>
    <string name="search_for_breed">Search for breed...</string>
    <string name="noplacesfound">No Places Found</string>
    <string name="save_this_location_and_procced">Save this location &amp; Proceed</string>
    <string name="doctor_business_info_title">Doctor Business Info</string>
    <string name="edit_doctor_business_info_title">Edit Doctor Business info</string>
    <string name="serviceproviderbusiness">Service Provider Business</string>
    <string name="editserviceproviderbusiness">Edit Service Provider Business</string>
    <string name="image">Image</string>
    <string name="clinic_name">Clinic name</string>
    <string name="charge_amount">Service charge amount</string>
    <string name="business_name">Business name</string>
    <string name="education">Education</string>
    <string name="year_of_completion">Year of Completion</string>
    <string name="add">Add</string>
    <string name="education1">Education :</string>
    <string name="year_of_completion1">Year of Completion : </string>
    <string name="experience">Experience</string>
    <string name="company_name">Company</string>
    <string name="company_name1">Company :</string>
    <string name="total_experience">Total Experience :</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="add_more">Add More</string>
    <string name="pets_handled">Pets Handled</string>
    <string name="pet_type">Pet Type</string>
    <string name="clinic_address">Clinic Address</string>
    <string name="write_here">Write Here....</string>
    <string name="clinic_pict">Clinic pictures</string>
    <string name="service_gallery_images">Service gallery images</string>
    <string name="certificate">Certificate</string>
    <string name="certificates_if_any">Certificates if any</string>
    <string name="govt_proof">Govt ID Proof</string>
    <string name="photoid_proof">Photo ID Proof</string>
    <string name="choose">Choose</string>
    <string name="specialization_ifany">Specialization if any</string>
    <string name="submit">Submit</string>
    <string name="dismiss">Dismiss</string>
    <string name="alert">Sorry you cannot add more than 3</string>
    <string name="deleteholidaymsg">"Are you sure you want to delete this holiday? "</string>
    <string name="my_orders">My orders</string>
    <string name="my_appointments">My Appointments</string>
    <string name="manage_services">Manage Services</string>
    <string name="favourites">Favourites</string>
    <string name="my_coupons">My Coupons</string>
    <string name="dashboard">Dashboard</string>
    <string name="shop">Shop</string>
    <string name="feeds">Feeds</string>
    <string name="market">Marketplace</string>
    <string name="Market">Market</string>
    <string name="payment_details">Payment Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tabnew">New</string>
    <string name="tabcompleted">Completed</string>
    <string name="tabmissed">Missed</string>
    <string name="tabcancelled">Cancelled</string>
    <string name="load_more">Load More</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="norecordsfound">No Records Found</string>
    <string name="serv_name">Service name</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Complete</string>
    <string name="completed_on_date">Completed on 01-Sep-2020</string>
    <string name="missed_on_date">Missed on 01-Sep-2020</string>
    <string name="doctor_name">Doctor name</string>
    <string name="place">place * 2 km away</string>
    <string name="review_count">0</string>
    <string name="rating_value">0</string>
    <string name="specialization_dummy">Lorem ipsum ,dolor sit amet, consectetur , adipiscing</string>
    <string name="desc">Description</string>
    <string name="product_desc">Product Description</string>
    <string name="desc_dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="appointment">Appointment</string>
    <string name="or">Or</string>
    <string name="normal">Normal</string>
    <string name="emergency">Emergency</string>
    <string name="allergies">Allergies</string>
    <string name="upload_pet_current_images">Upload pet current images</string>
    <string name="upload_family_members_images">Upload current family images</string>
    <string name="continues">Continue</string>
    <string name="next">Next</string>
    <string name="add_comment_here">Add Comment here..</string>
    <string name="product_descriptions_here">Product descriptions here..</string>
    <string name="book_now">Book Now</string>
    <string name="filter">Filters</string>
    <string name="curent_location">Curent Location</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="service_name_pet_name">Service name * Pet Name</string>
    <string name="price">₹ 0</string>
    <string name="cancel_appointment">Cancel appointment</string>
    <string name="add_review">Add Review</string>
    <string name="all_categories">All categories</string>
    <string name="cancel_appointment_date">Cancelled on 01-Sep 2020</string>
    <string name="pickup_location">PickUp Location</string>
    <string name="current_location">Current Location</string>
    <string name="my_appointment">My appointment</string>
    <string name="pet_care">Pet Care</string>
    <string name="current">Current</string>
    <string name="cancelled">Cancelled</string>
    <string name="service_cost">Cost</string>
    <string name="cart">Cart</string>
    <string name="product_details">Product Details</string>
    <string name="petlovers">Petlovers</string>
    <string name="prescriptiondetails">Prescription Details</string>
    <string name="prescriptionmsg">Note : Pls use the + button to submit the entered details."\n" M - Morning, A - Afternoon ,N - Night.</string>
    <string name="cancelappointment">Are you sure you want to cancel this appoinment?</string>
    <string name="completeappointment">Are you sure you want to complete this appoinment?</string>
    <string name="profile">Profile</string>
    <string name="edit_no_underline">Edit</string>
    <string name="user_name">User Name</string>
    <string name="dummy_gmail_com">dummy@gmail.com</string>
    <string name="phn_num">9876543210</string>
    <string name="pets">Pets</string>
    <string name="subscribe">Subscribe</string>
    <string name="medical_history">Medical History</string>
    <string name="sub_services">Sub Services</string>
    <string name="notification">Notification</string>
    <string name="my_calendar">My Calendar</string>
    <string name="customer_orders">Customer Orders</string>
    <string name="manage_products">Manage Products</string>
    <string name="view_vendor_detail">View Vendor Details</string>
    <string name="grooming">Grooming</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="bussiness_reg">Business Region</string>
    <string name="chennai">Chennai</string>
    <string name="_1234abcd12344321">1234ABCD12344321</string>
    <string name="business_location">Business Location</string>
    <string name="chennai_2a_3rd_main_rd_ram_nagar_karnam_street_dhadeswaram_nagar_velachery_chennai_tamil_nadu_600042_india">Chennai 2a, 3rd Main Rd, Ram Nagar, Karnam Street, Dhadeswaram Nagar, Velachery, Chennai, Tamil Nadu 600042, India</string>
    <string name="business_gallery_images">Business Gallery</string>
    <string name="reports">Reports</string>
    <string name="sos">SOS</string>
    <string name="add_products">Add Products</string>
</resources>