<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item android:id="@+id/nav_item_one"
            android:icon="@drawable/like"
            android:title="@string/favourites"/>
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item android:id="@+id/nav_item_two"
            android:icon="@drawable/myorders"
            android:title="@string/my_orders" />
    </group>


    <!--
       <item android:id="@+id/nav_item_genre"
        android:icon="@drawable/referral"
        android:title="Genre" />-->
    <group android:checkableBehavior="single"
        android:id="@+id/group3">
        <item android:id="@+id/nav_item_three"
        android:icon="@drawable/myappointments"
        android:title="@string/my_appointments" />
    </group>

    <group
        android:id="@+id/group4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_four"
            android:icon="@drawable/discount"
            android:title="@string/my_coupons"
            android:visible="true" />
    </group>


        <group android:checkableBehavior="single"
            android:id="@+id/group5">
        <item android:id="@+id/nav_item_five"
            android:icon="@drawable/medicalhistory"
            android:title="@string/medical_history"
            android:visible="false"/>
        </group>

        <group android:checkableBehavior="single"
            android:id="@+id/group6">
            <item
                android:id="@+id/nav_item_six"
                android:icon="@drawable/ic_payment"
                android:title="@string/payment_details"
                android:visible="false" />
        </group>

    <group android:checkableBehavior="single"
            android:id="@+id/group7">
        <item android:id="@+id/nav_item_seven"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notification"
            android:visible="true"/>
        </group>

    <group
        android:id="@+id/group9"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_nine"
            android:icon="@drawable/ic_sos"
            android:title="@string/sos"
            android:visible="true" />
    </group>




    <group android:checkableBehavior="single"
        android:id="@+id/group8">
    <item android:id="@+id/nav_item_eight"
        android:icon="@drawable/logout"
        android:title="@string/logout" />
    </group>



</menu>