<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_corner">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:background="@drawable/ic_close"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txt_emergency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/view_vendor_detail"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="@dimen/width_appoitmentdetails"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:fontFamily="@font/futuramediumbt"
                android:maxLines="1"
                android:text="@string/business_gallery_images"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_businessimg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/width_appoitmentdetails"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/futuramediumbt"
                    android:maxLines="1"
                    android:text="@string/business_name"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_business_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/futuramediumbt"
                    android:maxLines="1"
                    android:text="@string/grooming"
                    android:textColor="@color/new_sec_txt_color"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/width_appoitmentdetails"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:fontFamily="@font/futuramediumbt"
                    android:maxLines="1"
                    android:text="@string/vendor_name"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_vendor_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/futuramediumbt"
                    android:maxLines="1"
                    android:text="@string/_1234abcd12344321"
                    android:textColor="@color/new_sec_txt_color"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/width_appoitmentdetails"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/futuramediumbt"
                    android:maxLines="1"
                    android:text="@string/bussiness_reg"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_bussiness_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/futuramediumbt"
                    android:maxLines="1"
                    android:text="@string/chennai"
                    android:textColor="@color/new_sec_txt_color"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/width_appoitmentdetails"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/futuramediumbt"
                    android:maxLines="1"
                    android:text="@string/business_location"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_business_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/futuramediumbt"
                    android:text="@string/chennai_2a_3rd_main_rd_ram_nagar_karnam_street_dhadeswaram_nagar_velachery_chennai_tamil_nadu_600042_india"
                    android:textColor="@color/new_sec_txt_color"
                    android:textSize="14sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/new_rounded_corner_btn"
                android:fontFamily="@font/futuramediumbt"
                android:text="@string/cancel"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text_size_for_header" />

        </LinearLayout>


    </LinearLayout>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="gone"
        app:indicatorColor="@color/new_green_btn"
        app:indicatorName="LineSpinFadeLoaderIndicator" />

</RelativeLayout>
 