<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_root"
    android:orientation="vertical"
    android:layout_marginEnd="10dp">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="8dp"
            android:elevation="10dp">

            <ImageView
                android:id="@+id/img_doctors_image"
                android:layout_width="130dp"
                android:layout_height="90dp"
                android:src="@drawable/services"
                android:scaleType="fitXY"
                android:contentDescription="@string/image" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/txt_doctors_name"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/futuramediumbt"
            android:maxLines="1"
            android:text="@string/sub_services"
            android:textColor="@color/new_txt_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_doctors_specialization"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/futuramediumbt"
            android:maxLines="1"
            android:text="@string/specialization"
            android:textColor="@color/new_txt_color"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@drawable/light_orange_background">

                <TextView
                    android:id="@+id/txt_star_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="5dp"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/futuramediumbt"
                    android:text="@string/rating_value"
                    android:textColorHint="@color/new_txt_color"
                    android:textSize="12sp"
                    app:drawableLeftCompat="@drawable/ic_baseline_star_rate_24"
                    app:drawableStartCompat="@drawable/ic_baseline_star_rate_24" />


            </RelativeLayout>
            <TextView
                android:id="@+id/txt_review_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futurabookfont"
                android:padding="2dp"
                android:text="@string/review_count"
                android:textColor="@color/new_sec_txt_color"
                android:textSize="14sp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>
        </LinearLayout>




</LinearLayout>