<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tablayout"
            style="@style/TabLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/tab_spacing_half"
            app:tabBackground="@drawable/tab_background"
            app:tabGravity="fill"
            app:tabIndicatorHeight="0dp"
            app:tabMode="fixed"
            app:tabPaddingEnd="0dp"
            app:tabPaddingStart="0dp"
            app:tabRippleColor="@null"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/green_color">


            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabnew" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabcompleted" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabMissed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabmissed" />

        </com.google.android.material.tabs.TabLayout>
    </LinearLayout>


        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_above="@+id/footerView"
            android:layout_below="@+id/headerView">


            <TextView
                android:id="@+id/txt_no_records"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/norecordsfound"
                android:textColor="@color/color"
                android:textSize="16sp"
                android:visibility="gone" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>



    <LinearLayout
        android:id="@+id/footerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"/>
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:indicatorColor="@color/green"
        app:indicatorName="LineSpinFadeLoaderIndicator" />


</RelativeLayout>